# webserver

./: .editorconfig  .gitignore  .prototools  Cargo.toml  Dockerfile  README.md  default.nix  dockerManifest.json  flake.nix  moon.yml  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  docker-gha-cache.yml  nix-cachix.yml  nix-gha-cache.yml
.moon/: tasks.yml  toolchain.yml  workspace.yml
assets/: main.css
src/: main.rs
src/http/: mod.rs
src/server/: address.rs  constants.rs  html.rs  http.rs  mod.rs  port.rs
src/server/router/: mod.rs
src/server/router/routes/: mod.rs
src/server/router/routes/assets/: mod.rs
src/server/router/routes/dashboard/: get.rs  mod.rs
src/server/router/routes/home/: get.rs  mod.rs
src/server/router/routes/login/: get.rs  mod.rs  post.rs
src/trace/: mod.rs
templates/components/: hero.html
templates/components/dashboard/: get.html
templates/components/login/: get.html
templates/layouts/: base.html
templates/pages/: home.html
templates/pages/dashboard/: get.html
templates/pages/login/: get.html  post.html
